templates/service.yaml
# sonarqube-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
spec:
  selector:
    app: sonarqube
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  type: LoadBalancer
